--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<HTML>
+<!DOCTYPE html/>
+<html>
     <head>
         <title>Lynx Invest</title>
+        <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>Lynx</h1>
         <p>This is a website for Lynx Invest.</p>
+        <p>Lynx was founded in 2010 in the wake of the Global Financial Crisis to provide strategic capital solutions to Asian corporates amidst reduced engagement by global financial institutions
+
+            Lynx began as an advisory firm and later expanded into principal investing with select Asian family offices Lynx is most active in Singapore, Indonesia and Vietnam
+            
+            </p>
     </body>
-</HTML>
+</html>
