--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
         <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>Lynx</h1>
-        <p>This is a website for Lynx Invest.</p>
-        <p>Lynx was founded in 2010 in the wake of the Global Financial Crisis to provide strategic capital solutions to Asian corporates amidst reduced engagement by global financial institutions
-
-            Lynx began as an advisory firm and later expanded into principal investing with select Asian family offices Lynx is most active in Singapore, Indonesia and Vietnam
-            
+        <img width 130 height = 30 src="https://i.ibb.co/p2NdJD2/Lynx-new-logo-Aug-2015.png"/>
+        <br>
+        <br>
+        <center>
+        <img width= 1420 height= 600 src="https://static1.squarespace.com/static/5c8605bed7819e5f55605a3c/t/5c860854ec212de659411adf/1552287843973/edited.jpg"/>
+        <br>
+        <br>
+        <p>Lynx was founded in 2010 in the wake of the Global Financial Crisis to provide strategic capital solutions to Asian corporates amidst reduced engagement by global financial institutions 
             </p>
+        <p>Lynx began as an advisory firm and later expanded into principal investing with select Asian family offices Lynx is most active in Singapore, Indonesia and Vietnam
+        </p>
+    </center>
     </body>
 </html>
