--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
     <head>
         <title>Lynx Invest</title>
-        <link href="styles.css" rel="stylesheet"/>
     </head>
+    <link href="styles.css" rel="stylesheet"/>
     <body>
-        <img width 130 height = 30 src="https://i.ibb.co/p2NdJD2/Lynx-new-logo-Aug-2015.png"/>
+    <div class="container"></div>
+        <header class="container">
+                <div class="row">
+                        <img width 130 height = 30 src="https://i.ibb.co/p2NdJD2/Lynx-new-logo-Aug-2015.png"/>
+                  <nav class="direction">
+                    <p>Home</p>
+                    <p>Portfolio</p>
+                    <p>Team</p>
+                  </nav>
+                </div>
         <br>
         <br>
         <center>
@@ -18,4 +27,6 @@
         </p>
     </center>
     </body>
+    <p id="footer"> &copy; Lynx Invest Asia Pte Ltd </p>
+</div>
 </html>
